# amz-market-intelligence-lakehouse-platform

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
.tmp_dagster_home_f221_3x4/history/: runs.db
.tmp_dagster_home_f221_3x4/history/runs/: .db  index.db
.tmp_dagster_home_f221_3x4/schedules/: schedules.db
data/details/2026-03-04/: details_US_112136.json
data/search/2026-03-04/: search_sweatshirt_US_110356.json
docs/: gold_layer_design.md  market_research_analytics.md  query_engine_design.md  silver_layer_design.md
elt_pipeline/: __init__.py  readme.md
elt_pipeline/assets/: __init__.py  bronze.py  silver.py
elt_pipeline/assets/bronze/: __init__.py
elt_pipeline/assets/gold/: mart_brand_competitive.py  mart_keyword_daily.py
elt_pipeline/assets/silver/: __init__.py  product_details.py  search_results.py
elt_pipeline/io_manager/: __init__.py  minio_io_manager.py
elt_pipeline/resources/: __init__.py  minio_resource.py  spark_resource.py
