[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "elt_pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-webserver",
    "polars[cloud]",
    "minio",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["elt_pipeline*"]

[tool.dagster]
module_name = "elt_pipeline"
code_location_name = "elt_pipeline"
