[project]
name = "amz-market-intelligence-lakehouse-platform"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.20",
    "dagster-webserver>=1.12.20",
    "delta-spark>=3.2.0",
    "deltalake>=1.5.0",
    "minio>=7.2.20",
    "polars>=1.39.3",
    "pyspark>=3.5.0",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.2.0",
]


[tool.dagster]
module_name = "elt_pipeline" 


