[project]
name = "amz-market-intelligence-lakehouse-platform"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.20",
    "dagster-webserver>=1.12.20",
    "delta-spark>=3.2.0",
    "deltalake>=1.5.0",
    "duckdb>=1.2.2",
    "duckdb-engine>=0.15.0",
    "minio>=7.2.20",
    "polars>=1.39.3",
    "pyspark>=3.5.0",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.dagster]
module_name = "elt_pipeline"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "spark/jars", "minio_data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long — handled by formatter
    "B008",  # do not perform function calls in default arguments (Dagster uses this pattern)
]
